samples/_failures_safe/1761513412_8b6d64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77d04827.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_77d04827.c:137:9: error: expected expression at end of input
  137 |         if (strcmp(analyzer->entries[i].level, level) ==
      |         ^~
./samples/SAFE/__tmp_77d04827.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77d04827.c:137:9: error: expected declaration or statement at end of input
